--- a/word_counts.ipynb
+++ b/word_counts.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "cleaning.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOA6eq6xZYnR15FgY1ZUydJ",
+      "authorship_tag": "ABX9TyN3rkyLgPYqWvv3w04ERmt7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,21 +40,7 @@
         "%matplotlib inline\n",
         "\n",
         "import pandas as pd\n",
-        "import numpy as np\n",
-        "\n",
-        "from PIL import Image\n",
-        "\n",
-        "from skimage.feature import hog\n",
-        "from skimage.color import rgb2grey\n",
-        "\n",
-        "from sklearn.model_selection import train_test_split\n",
-        "from sklearn.metrics import accuracy_score\n",
-        "from sklearn.preprocessing import StandardScaler\n",
-        "from sklearn.decomposition import PCA\n",
-        "from sklearn.svm import SVC\n",
-        "\n",
-        "from sklearn.metrics import roc_curve, auc\n",
-        "from sklearn.metrics import confusion_matrix, classification_report"
+        "import numpy as np\n"
       ],
       "execution_count": 2,
       "outputs": []
