--- a/cleaning_data.ipynb
+++ b/cleaning_data.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1di9amiAqiSz0gjImufvX8ZZi9nTTHNz_",
-      "authorship_tag": "ABX9TyOX3zwBhaIReUvGKNTS868q",
+      "authorship_tag": "ABX9TyNQNMDeKS3BN/p7Lotvxe9O",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,7 +40,7 @@
         "import string\n",
         "import numpy as np\n"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -58,7 +58,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -83,7 +83,7 @@
       "source": [
         "train = pd.read_csv('drive/My Drive/jigsaw-toxic-comment-train.csv')"
       ],
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -230,7 +230,7 @@
         "  elem = re.sub(r'[\\n\\t]',' ',elem)\n",
         "  #remove punctuation\n",
         "  elem = elem.translate(elem.maketrans(\"\",\"\",string.punctuation))\n",
-        "  #remove hangul\n",
+        "  #remove hangul & characters\n",
         "  eng = re.findall(u'[^\\uAC00-\\uD7A3\\u4E00-\\u9FA5\\u3000-\\u303F]',elem)\n",
         "  for s in elem:\n",
         "    if s not in eng:\n",
@@ -239,7 +239,7 @@
         "  elem = re.sub(r'[ ]{2,}',' ',elem)\n",
         "  clean.append(elem.strip())"
       ],
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -256,7 +256,7 @@
       "source": [
         "clean"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1282,7 +1282,7 @@
       "source": [
         "train['comment_text'] = np.array(clean)"
       ],
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1305,7 +1305,7 @@
         "      train.drop([count],inplace=True)\n",
         "  count +=1"
       ],
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1322,7 +1322,7 @@
       "source": [
         "train.head()"
       ],
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1444,7 +1444,7 @@
       "source": [
         "train.to_csv('drive/My Drive/new_clean_data.csv',index = False)"
       ],
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": []
     },
     {
